--- a/scripts/config2005nei.json
+++ b/scripts/config2005nei.json
@@ -1,29 +1,29 @@
 {
     "Dirs": {
-        "Home": "/media/chris/data1/2005_nei_data",
-        "Input": "[Home]",
-        "Ancilliary": "${GOPATH}/src/bitbucket.org/ctessum/aep/test/ancilliary",
-		"Shapefiles": "[Home]/shapefiles",
-		"Output":"[Home]/Output",
+        "Home": "${GOPATH}/src/bitbucket.org/ctessum/aep",
+        "Input": "[Home]/test/inputdata/emissions",
+        "Ancilliary": "[Home]/ancilliary",
+		"Shapefiles": "[Home]/test/inputdata/shapefiles",
+		"Output":"[Home]/test/Output",
 		"GriddedSrgs":"[Output]/srgs"
     },
     "DefaultSettings": {
 		"StartDate": "2005/01/01",
-		"EndDate": "2005/12/31",
+		"EndDate": "2005/02/28",
 		"Tstep":"1h",
         "OutputType": "WRF",
         "SpecType": "mol",
         "InputUnits": "tons/year",
         "MatchFullSCC": false,
-        "WPSnamelist": "[Ancilliary]/namelist_na12.wps",
-        "WRFnamelist": "[Ancilliary]/namelist_na12.input",
+        "WPSnamelist": "[Ancilliary]/namelist_minneapolis.wps",
+        "WRFnamelist": "[Ancilliary]/namelist_minneapolis.input",
         "OldWRFout": "[Home]/xxx[DATE]",
 		"ForceWesternHemisphere":true,
 		"InputProj4":"+proj=longlat",
         "EarthRadius": 6370997,
 		"SpeciesGroupName":"RADM2",
 		"RegenerateSpatialData": false,
-		"SimulationName":"aep_2005nei_na12",
+		"SimulationName":"2005nei",
         "DebugLevel": 0,
         "Ncpus": 8,
         "RunSpeciate": true,
